# rust-tiny-steps

./: .gitattributes  Cargo.toml  README.md  ex002_format_string.rs  ex003_variables_sum.rs  ex004_mutability.rs  ex005_multiple_placeholders.rs  ex005_type_annotation.rs  ex006_constants.rs  ex007_user_input.rs
ex001_hello_rust/: Cargo.toml
ex002_personal_greeting/: Cargo.toml
ex003_multi_line_message/: Cargo.toml
ex004_string_formatting/: Cargo.toml
ex005_multiple_placeholders/: Cargo.toml
ex006_first_variable/: Cargo.toml
ex007_multiple_variables/: Cargo.toml
ex008_simple_addition/: Cargo.toml
ex009_storing_results/: Cargo.toml
ex010_subtraction/: Cargo.toml
ex011_multiply_numbers/: Cargo.toml
ex012_divide_numbers/: Cargo.toml
ex013_error_changing_variable/: Cargo.toml
ex014_learn_to_make_changing_variables/: Cargo.toml
ex015_practice_changing_variables/: Cargo.toml
ex016_understand_variable_type/: Cargo.toml
ex017_different_number_types/: Cargo.toml
ex018_constants_vs_variables/: Cargo.toml
ex019_use_multiple_operations/: Cargo.toml
ex020_remainder_operation/: Cargo.toml
ex021_getting_input/: Cargo.toml
ex022_create_empty_string/: Cargo.toml
ex023_echo_program/: Cargo.toml
ex024_cleanup_user_input/: Cargo.toml
ex025_get_a_number_from_user/: Cargo.toml
ex026_conver_text_to_number/: Cargo.toml
ex027_handle_parsing_errors_safely/: Cargo.toml
ex028_simple_calculator_input/: Cargo.toml
ex029_input_validation_message/: Cargo.toml
ex030_greeting_program/: Cargo.toml
ex032_add_else/: Cargo.toml
ex033_check_if_equal/: Cargo.toml
ex034_multiple_condition/: Cargo.toml
ex035_if_as_an_expression/: Cargo.toml
ex036_crate_your_first_function/: Cargo.toml
ex038_function_with_parameter/: Cargo.toml
ex039_multiple_parameters/: Cargo.toml
ex040_return_a_value/: Cargo.toml
ex041_use_return_keyword/: Cargo.toml
ex042_early_returns/: Cargo.toml
ex043_function_returning_bool/: Cargo.toml
ex044_returning_larger_one/: Cargo.toml
ex045_fucntion_without_return/: Cargo.toml
ex046_build_a_calculator/: Cargo.toml
ex047_function_calling_function/: Cargo.toml
ex048_absolute_value_function/: Cargo.toml
ex049_square_a_number/: Cargo.toml
ex050_new_recursion/: Cargo.toml
ex051_factorial_with_recursion/: Cargo.toml
ex052_check_if_positive/: Cargo.toml
ex053_check_if_negative/: Cargo.toml
ex054_check_range/: Cargo.toml
ex055_string_parameter/: Cargo.toml
ex056_celsius_to_fahreheit/: Cargo.toml
ex057_fahrenheit_to_celsius/: Cargo.toml
ex058_calculate_circle_area/: Cargo.toml
ex059_calculate_rectangle_area/: Cargo.toml
ex060_grade_calculator/: Cargo.toml
ex061_first_loop/: Cargo.toml
ex062_break_out_of_the_loop/: Cargo.toml
ex063_continue_in_loop/: Cargo.toml
ex064_while_loop/: Cargo.toml
ex065_while_with_user_input/: Cargo.toml
ex067_inclusive_range/: Cargo.toml
(+109 files in other folders)
