[package]
name = "rust-tiny-steps"
version = "0.1.0"
edition = "2021"

[workspace]
[workspace]
members = [
    "ex001_hello_rust",
    "ex002_personal_greeting",
    "ex003_multi_line_message",
    "ex004_string_formatting",
    "ex005_multiple_placeholders",
    "ex006_first_variable",
    "ex007_multiple_variables",
    "ex008_simple_addition",
    "ex009_storing_results",
    "ex010_subtraction",
    "ex011_multiply_numbers",
    "ex012_divide_numbers",
    "ex013_error_changing_variable",
    "ex014_learn_to_make_changing_variables",
    "ex015_practice_changing_variables",
    "ex016_understand_variable_type",
    "ex017_different_number_types",
    "ex018_constants_vs_variables",
    "ex019_use_multiple_operations",
    "ex020_remainder_operation",
    "ex021_getting_input",
    "ex022_create_empty_string",
    "ex023_echo_program",
    "ex024_cleanup_user_input",
    "ex025_get_a_number_from_user",
    "ex026_conver_text_to_number",
    "ex027_handle_parsing_errors_safely",
    "ex028_simple_calculator_input",
    "ex029_input_validation_message",
    "ex030_greeting_program",
    "ex031_first_if_statement",
    "ex032_add_else",
    "ex033_check_if_equal",
    "ex034_multiple_condition",
    "ex035_if_as_an_expression",
    "ex036_crate_your_first_function",
    "ex037_calling_function",
    "ex038_function_with_parameter",
    "ex039_multiple_parameters",
    "ex040_return_a_value",
    "ex041_use_return_keyword",
    "ex042_early_returns",
    "ex043_function_returning_bool",
    "ex044_returning_larger_one",
    "ex045_fucntion_without_return",
    "ex046_build_a_calculator",
    "ex047_function_calling_function",
    "ex048_absolute_value_function",
    "ex049_square_a_number",
    "ex050_new_recursion",
    "ex051_factorial_with_recursion",
    "ex052_check_if_positive",
    "ex053_check_if_negative",
    "ex054_check_range",
    "ex055_string_parameter",
    "ex056_celsius_to_fahreheit",
    "ex057_fahrenheit_to_celsius",
    "ex058_calculate_circle_area",
    "ex059_calculate_rectangle_area",
    "ex060_grade_calculator",
    "ex061_first_loop",
    "ex062_break_out_of_the_loop",
    "ex063_continue_in_loop",
    "ex064_while_loop",
    "ex065_while_with_user_input",
    "ex066_for_loop_with_range",
    "ex067_inclusive_range",
    "ex068_countdown_loop",
    "ex069_skip_numbers",
    "ex070_sum_with_loop",
    "ex071_multiplication",
    "ex072_factorial_with_loop",
    "ex073_countdown_to_blastoff",
    "ex074_find_first_number_divisible_by_7",
    "ex075_nested_loops",
    "ex076_multiplication_table_grid",
    "ex077_print_triangle_of_stars",
    "ex078_loop_lables",
    "ex079_sum_of_squares",
    "ex080_find_average",
    "ex081_while_with_multiple_condition",
    "ex084_fizzbuzz_game",
    "ex085_guess_the_number",
]
